# event-aggregator

./: .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml
.github/workflows/: ci.yml
