[tool.poetry]
name = "event-aggregator"
version = "0.1.0"
description = ""
authors = ["Tim Mees <tim.mees83@gmail.com>"]
readme = "README.md"
packages = [{include = "evagg"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pylint = "^3.0.2"
ruff = "^0.1.6"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
