[tool.poetry]
name = "event-aggregator"
version = "0.1.0"
description = ""
authors = ["Tim Mees <tim.mees83@gmail.com>"]
readme = "README.md"
packages = [{include = "evagg"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pylint = "^3.0.2"
ruff = "^0.1.6"
pre-commit = "^3.5.0"
commitizen = "^3.12.0"
pytest = "^7.4.3"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
